<resources>
    <string name="app_name">Web3j Sample</string>
    <string name="import_wallet">Import Wallet</string>
    <string name="generate_wallet">Generate Wallet</string>
    <string name="make_transaction">Make transaction</string>
    <string name="amount_of_eth">Amount of ETH</string>
    <string name="from_address">From address</string>
    <string name="to_address">To address</string>
    <string name="clear_wallets">Clear wallets</string>
    <string name="clear_contracts">Clear contracts</string>
    <string name="making_transaction">The transaction will take some time to complete, be patient…</string>
    <string name="deploying_contracts">Deploying the contract, be patient…</string>
    <string name="deploy_contract">Deploy Contract</string>
    <string name="wallet_address">Wallet Address</string>
</resources>
