<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/ethAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/amount_of_eth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fromEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/from_address"
        app:layout_constraintEnd_toStartOf="@id/suggestFromButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ethAmount" />

    <ImageView
        android:id="@+id/suggestFromButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@android:drawable/ic_menu_add"
        app:layout_constraintBottom_toBottomOf="@id/fromEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/fromEditText" />

    <EditText
        android:id="@+id/toEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/to_address"
        app:layout_constraintEnd_toStartOf="@id/suggestToButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fromEditText" />

    <ImageView
        android:id="@+id/suggestToButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@android:drawable/ic_menu_add"
        app:layout_constraintBottom_toBottomOf="@id/toEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/toEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>